* minor fixes for the worklist item's alignments

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-sub-panel.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-sub-panel.scss
@@ -431,6 +431,7 @@
   padding: 5px 0 5px 12px;
 
   .application-sub-panel__multiple-item-container--worklist-description {
+    align-items: flex-start;
     flex-flow: row nowrap;
   }
 }
